# compute-hyperv

./: .coveragerc  .docs-requirements.txt  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements-windows.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
compute_hyperv/: __init__.py  i18n.py
compute_hyperv/hacking/: checks.py
compute_hyperv/nova/: block_device_manager.py  conf.py  constants.py  coordination.py  driver.py  eventhandler.py  hostops.py  imagecache.py  livemigrationops.py  migrationops.py  pathutils.py  pdk.py  rdpconsoleops.py  serialconsolehandler.py  serialconsoleops.py  serialproxy.py  snapshotops.py  vif.py  vmops.py  volumeops.py
compute_hyperv/nova/cluster/: clusterops.py  driver.py  livemigrationops.py  volumeops.py
compute_hyperv/nova/utils/: placement.py
compute_hyperv/tests/: fake_instance.py  test.py
compute_hyperv/tests/unit/: test_base.py  test_block_device_manager.py  test_coordination.py  test_driver.py  test_eventhandler.py  test_hostops.py  test_imagecache.py  test_livemigrationops.py  test_migrationops.py  test_pathutils.py  test_pdk.py  test_rdpconsoleops.py  test_serialconsolehandler.py  test_serialconsoleops.py  test_serialproxy.py  test_snapshotops.py  test_vif.py  test_vmops.py  test_volumeops.py
compute_hyperv/tests/unit/cluster/: test_clusterops.py  test_driver.py  test_livemigrationops.py  test_volumeops.py
compute_hyperv/tests/unit/utils/: test_placement.py
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  sample_config.rst  usage.rst
doc/source/configuration/: config.rst  index.rst  sample_config.rst
doc/source/install/: index.rst  install.rst  next-steps.rst  prerequisites.rst  verify.rst
doc/source/troubleshooting/: index.rst
doc/source/usage/: index.rst
etc/: compute-hyperv-config-generator.conf
hyperv/: i18n.py
hyperv/nova/: __init__.py  basevolumeutils.py  block_device_manager.py  conf.py  constants.py  driver.py  eventhandler.py  hostops.py  hostutils.py  hostutilsv2.py  imagecache.py  ioutils.py  livemigrationops.py  livemigrationutils.py  migrationops.py  namedpipe.py  networkutils.py  networkutilsv2.py  ovsutils.py  pathutils.py  pdk.py  rdpconsoleops.py  rdpconsoleutilsv2.py  serialconsolehandler.py  serialconsoleops.py  serialproxy.py  snapshotops.py  utilsfactory.py  vhdutils.py  vhdutilsv2.py  vif.py  vmops.py  vmutils.py  vmutils10.py  vmutilsv2.py  volumeops.py  volumeutils.py  volumeutilsv2.py
hyperv/nova/cluster/: clusterops.py  driver.py  livemigrationops.py
hyperv/tests/: fake_instance.py  test.py
hyperv/tests/unit/: db_fakes.py  fake.py  test_base.py  test_basevolumeutils.py  test_block_device_manager.py  test_blockdevicemanager.py  test_driver.py  test_eventhandler.py  test_hostops.py  test_hostutils.py  test_hostutilsv2.py  test_hypervapi.py  test_imagecache.py  test_ioutils.py  test_livemigrationops.py  test_livemigrationutils.py  test_migrationops.py  test_namedpipe.py  test_networkutils.py  test_networkutilsv2.py  test_pathutils.py  test_pdk.py  test_rdpconsoleops.py  test_rdpconsoleutils.py  test_rdpconsoleutilsv2.py  test_serialconsolehandler.py  test_serialconsoleops.py  test_serialproxy.py  test_snapshotops.py  test_utilsfactory.py  test_vhdutils.py  test_vhdutilsv2.py  test_vif.py  test_vmops.py  test_vmutils.py  test_vmutils10.py  test_vmutilsv2.py  test_volumeops.py  test_volumeutils.py  test_volumeutilsv2.py
hyperv/tests/unit/cluster/: test_clusterops.py  test_driver.py  test_livemigrationops.py
nova/: __init__.py
nova/virt/compute_hyperv/: driver.py
nova/virt/compute_hyperv/cluster/: driver.py
releasenotes/notes/: cluster-distributed-locks-5f12252af6b3913b.yaml  drop-ovs-support-616ec2952580c93d.yaml  drop-py-2-7-5cd36052d5c2e594.yaml  instance-evacuate-2c46e63e3a6ae9c4.yaml  online-volume-resize-446d58c9f6f340b6.yaml  rbd-support-9bb0037f69249785.yaml  update-device-metadata-7204fb0e85bad1e3.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
