[metadata]
name = compute-hyperv
version = 2015.1.0a2
summary = Hyper-V Nova Driver
description-file =
    README.rst
license = Apache License, Version 2.0
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
url = https://github.com/cloudbase/compute-hyperv
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
keywords = openstack nova hyper-v compute

[files]
packages =
    hyperv

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hyperv/locale
domain = compute-hyperv

[update_catalog]
domain = compute-hyperv
output_dir = hyperv/locale/nova
input_file = hyperv/locale/compute-hyperv.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hyperv/locale/compute-hyperv.pot
